<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margins"
    android:orientation="vertical"
    tools:context="br.com.edecio.minhalistadecompras.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto"/>

    <EditText
        android:id="@+id/edtProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/entreViews"
        android:text="@string/local_da_compra" />

    <Spinner
        android:id="@+id/spnLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/entreViews"
        android:text="@string/quantidade"/>

    <EditText
        android:id="@+id/edtQuant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/entreViews"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnListar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listar"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
